<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btnPostsHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/posts"
        app:layout_constraintBottom_toTopOf="@id/btnAlbumsHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnAlbumsHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/albums"
        app:layout_constraintBottom_toTopOf="@id/btnUsersHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPostsHome" />

    <Button
        android:id="@+id/btnUsersHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/users"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAlbumsHome" />

</androidx.constraintlayout.widget.ConstraintLayout>